Add text to body

--- a/HTML_basics/index.html
+++ b/HTML_basics/index.html
@@ -5,4 +5,29 @@
 		<meta charset="UTF-8">
 		<title>My First Webpage</title>
 	</head>
+	
+	<body>
+		<h1>Hello World!</h1>
+
+		Lorem ipsum dolor sit amet, consectetur asipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+
+		Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
+	</body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </html>
