--- a/HTML_basics/index.html
+++ b/HTML_basics/index.html
@@ -9,9 +9,9 @@
 	<body>
 		<h1>Hello World!</h1>
 
-		Lorem ipsum dolor sit amet, consectetur asipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+		<p>Lorem ipsum dolor sit amet, consectetur asipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
 
-		Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
+		<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
 	</body>
 
 
