Add text tile in bold format

--- a/HTML_basics/index.html
+++ b/HTML_basics/index.html
@@ -9,6 +9,8 @@
 	<body>
 		<h1>Hello World!</h1>
 
+		<strong>Lorem Ipsum Dolor</strong>
+		
 		<p>Lorem ipsum dolor sit amet, consectetur asipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
 
 		<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
