Add comments to index.html file

--- a/HTML_basics/index.html
+++ b/HTML_basics/index.html
@@ -7,11 +7,15 @@
 	</head>
 	
 	<body>
+		<!--In this index file you can see nested tags-->
+		<!--This is the heading-->
 		<h1>Hello World!</h1>
 
-		<strong>Lorem Ipsum Dolor</strong>
+		<!--bolden the text-->
+		<p><strong>Lorem Ipsum Dolor</strong></p>
 		
-		<p>Lorem ipsum dolor sit amet, consectetur asipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+		<!-- add some em tag -->
+		<p>Lorem ipsum dolor sit amet, <em>consectetur asipiscing elit</em>, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
 
 		<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
 	</body>
