Add Lists(ordered and unordered to web page

--- a/HTML_basics/index.html
+++ b/HTML_basics/index.html
@@ -18,6 +18,30 @@
 		<p>Lorem ipsum dolor sit amet, <em>consectetur asipiscing elit</em>, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
 
 		<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+
+		<!-- Adding Lists to the page -->
+		<!-- 1. Ordered Lists -->
+
+		<ol>
+			<li>Plug power cable into system unit</li>
+			<li>Plug monitor cable into system unit</li>
+			<li>Plug keyboard cable into system unit</li>
+			<li>Plug mouse cable into system unit</li>
+			<li>Plug power cable into wall socket</li>
+			<li>Press power button on system unit</li>
+			<li>Press power button on monitor</li>
+		</ol>
+
+		<!-- 2. Unordered Lists -->
+		<ul>
+			<li>Mouse</li>
+			<li>Keyboard</li>
+			<li>Monitor</li>
+			<li>System Unit</li>
+			<li>Power Cable</li>
+			<li>VGA Cable</li>	
+		</ul>
+
 	</body>
 
 
