--- a/HTML_basics/index.html
+++ b/HTML_basics/index.html
@@ -21,7 +21,7 @@
 
 		<!-- Adding Lists to the page -->
 		<!-- 1. Ordered Lists -->
-
+		<p>Steps to set up a computer:</p>
 		<ol>
 			<li>Plug power cable into system unit</li>
 			<li>Plug monitor cable into system unit</li>
@@ -31,8 +31,9 @@
 			<li>Press power button on system unit</li>
 			<li>Press power button on monitor</li>
 		</ol>
-
+		
 		<!-- 2. Unordered Lists -->
+		<p>List of computer parts:</p>
 		<ul>
 			<li>Mouse</li>
 			<li>Keyboard</li>
