Add Absolute links to web page

--- a/HTML_basics/links_and_images/index.html
+++ b/HTML_basics/links_and_images/index.html
@@ -8,5 +8,23 @@
  </head>
  <body>
     <h1>Homepage</h1>
+    <!-- This is the anchor tag used to link pages, images, any resource on the internet or in the server running the web page/app 
+    * <a></>a> is the anchor tag, href is the attribute that specifies the link destination 
+   * href can take a URL (link to a resource on the internet) or a file path (link to a resource in the server running the web page/app)
+
+   * target="_blank" opens the link in a new tab
+
+   * rel="noopener noreferrer" is a security measure to prevent the new page from having access to the original page via the window.opener property
+
+   * The text between the opening and closing anchor tags is the clickable text that will take you to the link destination
+    --> 
+
+    <a href="https://www.github.com/nuelwhite" target="_blank" rel="noopener noreferrer">About Us</a>
+
+    <!-- There are two types of links:
+     * Absolute links -> links to pages on other websites like the example above (scheme://domain/path)
+     
+     * Relative links -> links to pages located on our own websites 
+     -->
  </body>
  </html>
