Add relative link to webpage

--- a/HTML_basics/links_and_images/index.html
+++ b/HTML_basics/links_and_images/index.html
@@ -19,12 +19,14 @@
    * The text between the opening and closing anchor tags is the clickable text that will take you to the link destination
     --> 
 
-    <a href="https://www.github.com/nuelwhite" target="_blank" rel="noopener noreferrer">About Us</a>
+    <a href="https://www.github.com/nuelwhite" target="_blank" rel="noopener noreferrer">GitHub</a>
 
     <!-- There are two types of links:
      * Absolute links -> links to pages on other websites like the example above (scheme://domain/path)
      
      * Relative links -> links to pages located on our own websites 
      -->
+
+   <a href="pages/about.html">About</a>
  </body>
  </html>
