Add images directory

--- a/HTML_basics/links_and_images/index.html
+++ b/HTML_basics/links_and_images/index.html
@@ -28,5 +28,14 @@
      -->
 
    <a href="pages/about.html">About</a>
+   
+   <p>
+      <!-- Add images 
+       We add images to a web page using the <img> tag, it is a void element, and requires no closing tag.
+       
+       We embed an image into the src attribute, it takes the url of the image-->
+
+       <img src="./images/#" alt="No image yet">
+   </p>
  </body>
  </html>
